# csync-android

./: Android.cmake  ConfigureChecks.cmake  DefineOptions.cmake  android_build.sh
client/: CMakeLists.txt
cmake/Modules/: DefineInstallationPaths.cmake  FindLibSSH.cmake  FindSQLite3.cmake
modules/: CMakeLists.txt
src/: CMakeLists.txt  csync_config.c  csync_propagate.c  csync_update.c  csync_util.c
src/vio/: csync_vio.c
